--- a/Week 1: HTML/Day 5: CSS/css/style.css
+++ b/Week 1: HTML/Day 5: CSS/css/style.css
@@ -172,3 +172,50 @@ a:visited{
     padding:15px;
     box-sizing:border-box;
 }
+
+.p-box{ /*static by default*/
+    width: 800px;
+    height:800px;
+    border: 1px solid #000;
+    margin-top:30px;
+    position: relative;
+
+    background-image: url('../images/bgimage.jpeg');
+    background-repeat:no-repeat;
+    background-position: 100px 200px; /*push over 100px and down 200px*/
+    background-position: center top;
+}
+
+.p-box h1{
+    position: absolute;
+    top: 100px; /* come down 40px from the top*/ /*no relative so use the whole document as standard*/ /*1*/
+    left:200px;
+}
+
+.p-box h2{
+    position: absolute;
+    bottom: 40px;
+    right: 100px;
+}
+
+.fix-me{
+    position:fixed;
+    top: 400px; /*not gonnal move*/
+}
+
+/*psudo element*/
+.my-list li:first-child{
+    background: red; /* can use image or color here */
+}
+
+.my-list li:last-child{
+    background: blue;
+}
+
+.my-list li:nth-child(5){
+    background: yellow;
+}
+
+.my-list li:nth-child(even){
+    background: grey;
+}
