--- a/Practice/Week 3 DOM/style.css
+++ b/Practice/Week 3 DOM/style.css
@@ -53,6 +53,7 @@ li:hover{
     background-color: #b7db70;
 }
 
+/*
 #idea-1{
     display:none;
 }
@@ -61,4 +62,5 @@ li:hover{
     display:none;
 }
 
+*/
 
