--- a/Week10_authen/views/index.ejs
+++ b/Week10_authen/views/index.ejs
@@ -1,1 +1,4 @@
 <h1>Hi <%= name%> </h1> <!--<%= name%>  variable-->
+<form action="/logout?_method=DELETE" method="POST">
+    <button type="submit">Log out</button>
+</form>
